@@ -1,5 +1,15 @@
 2001-10-25  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procman.c: make default to not show app names since I think
+	it's probably strange to the user considering the desktop
+	files are delay loaded and changing the name looks funny when
+	sorting the tree by name
+
+	* interface.c: make the cancel button work in the simple
+	dialog
+
+2001-10-25  Kevin Vandersloot <kfv101@psu.edu>
+
 	* procdialogs.c: Pass the kill signal to the root password dialog
 	so the proper action is taken as root. Also many minor cosmetic
 	improvements.
